<LinearLayout
        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="center">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/question_text_view" android:layout_gravity="center_horizontal" android:padding="24dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:gravity="center">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_button"
                android:id="@+id/true_button"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_button"
                android:id="@+id/false_button"/>
    </LinearLayout>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cheatButton"
            android:text="@string/cheat_button"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/previous_button"
                android:text="@string/previous_button"
                android:drawableLeft="@drawable/arrow_left1" android:drawablePadding="4dp"
                android:contentDescription="@string/previous_button" tools:ignore="InconsistentLayout"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/next_button"
                android:text="@string/next_button"
                android:drawableRight="@drawable/arrow_right1" android:drawablePadding="4dp"
                android:contentDescription="@string/next_button"/>
    </LinearLayout>
</LinearLayout>